--- a/cover.tex
+++ b/cover.tex
@@ -11,6 +11,7 @@
 \usepackage{t1enc}
 \usepackage{listings}
 \lstset{language=C++,basicstyle=\ttfamily}
+\renewcommand{\thepage}{Cover - \arabic{page}}
 \begin{document}
 
 \begin{center}
