--- a/cover.tex
+++ b/cover.tex
@@ -15,9 +15,9 @@
 \begin{document}
 
 \begin{center}
-\textbf{\huge TODO競賽名稱}\\
+\textbf{\huge 111學年度資訊學科能力競賽}\\
 \vspace{5mm}
-\textbf{\huge TODO競賽名稱\ 試題本}\\
+\textbf{\huge 臺南一中校內初選\ 試題本}\\
 \vspace{10mm}
 \rule{17cm}{2pt}\\
 \vspace{5mm}
@@ -28,17 +28,16 @@
 \fontsize{14pt}{20pt}\selectfont
 \begin{enumerate}
     \setlength\itemsep{0.5pt}
-    \item 競賽時間：202TODO/TODO/TODO TODO:TODO \textasciitilde \, TODO:TODO，共 TODO 小時。
-    \item 本次競賽試題共 TODO 題，每題皆有子任務。
+    \item 競賽時間：2022/09/16 13:30 \textasciitilde\,16:30，共 3 小時。
+    \item 本次競賽試題共 7 題，每題皆有子任務。
     \item 為了愛護地球，本次競賽題本僅提供電子檔，不提供紙本。
     \item 每題的分數為該題所有子任務得分數加總；單筆子任務得分數為各筆繳交在該筆得到的最大分數。
     \item 本次初選比照南區賽提供記分板，複選比照全國賽不提供記分板。
-    \item 全部題目的輸入皆為標準輸入。
-    \item 全部題目的輸出皆為標準輸出。
+    \item 全部題目皆為標準輸入輸出。
     \item 所有輸入輸出請嚴格遵守題目要求，多或少的換行及空格皆有可能造成裁判系統判斷為答案錯誤。
     \item 每題每次上傳間隔為 120 秒，裁判得視情況調整。
     \item 所有試題相關問題請於競賽系統中提問，題目相關公告也會公告於競賽系統，請密切注意。
-    \item 如有電腦問題，請舉手向監考人員反映。
+    \item 如有電腦問題，請向監考人員反應。
     \item 如有如廁需求，須經過監考人員同意方可離場。
     \item 不得攜帶任何參考資料，但競賽系統上的參考資料可自行閱讀。
     \item 不得自行攜帶隨身碟，如需備份資料，請將資料儲存於電腦 D 槽。
